solutions/resilience-mesh/service-entry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: news-se
spec:
  hosts:
    - news-resilience-mesh-news.apps.ocp4.example.com
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
